--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~9.0.6",
+    "@angular/cli": "^9.0.7",
     "@angular/common": "~9.0.6",
     "@angular/compiler": "~9.0.6",
     "@angular/core": "~9.0.6",
@@ -21,6 +22,7 @@
     "@angular/router": "~9.0.6",
     "@ngtools/webpack": "^9.0.6",
     "latest-version": "^5.1.0",
+    "mkdirp": "^1.0.3",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
@@ -28,7 +30,6 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.900.6",
     "@angular-devkit/core": "^9.0.6",
-    "@angular/cli": "~9.0.6",
     "@angular/compiler-cli": "~9.0.6",
     "@angular/language-service": "~9.0.6",
     "@types/jasmine": "~3.5.0",
